# mirnov_viewer

./: .gitignore  Makefile  README.md  TODO  database.py  main.py  main_window.py  mirnov_arrays.py  plotting.py  requirements.txt
auxfiles/: calzeros.txt  coil_attr.pkl  coil_attr.xlsx  mirnov_names.py  signal_names.py
lib/: __init__.py  spectrograms_lib.py
lib/TJII_data_acquisition/: Makefile  main.py  meson.build  test.py
lib/TJII_data_acquisition/src/: tjii_data_acquisition.f90
src/: class_signal_arrays.py  class_signals.py  class_window_info.py  daq_window.py  main_window.py  mirnov_arrays.py  plotting.py  qt_workers.py  signal_arrays.py  utils.py  window_info.py
src/ui/: ui_listdialog.py  ui_mainwindow.py
ui/: ListDialog.ui  MainWindow.ui  prueba.ui  singlePlotWindow.ui  windowLayout.ui
